working site with some more throughful styling

--- a/index.html
+++ b/index.html
@@ -42,40 +42,26 @@
         </div>
         <div class="container2">
             <div class="origin">
-            <img 
-                src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg"
-                id="draggable-1"
-                class="draggable"
-                draggable="true"
-                ondragstart="onDragStart(event);"
-            >  
-            </div>            
-
-        </div>
-    
-
-
-
-
-
-
-        <!-- <div class="container">
-            <div class="drop-targets">
-                <div class="box">
-                    <img 
+                <img 
                     src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg"
-                    class="item" 
-                    id="item"
-                    draggable="true">
-                    <div class="item" id="item">
-                    </div>                
-                </div>
-                <div class="box"></div>
-                <div class="box"></div>
+                    id="draggable-1"
+                    class="draggable"
+                    draggable="true"
+                    ondragstart="onDragStart(event);">  
+                <img 
+                    src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg"
+                    id="draggable-2"
+                    class="draggable"
+                    draggable="true"
+                    ondragstart="onDragStart(event);">
+                <img 
+                    src="https://edit.co.uk/uploads/2016/12/Image-1-Alternatives-to-stock-photography-Thinkstock.jpg"
+                    id="draggable-3"
+                    class="draggable"
+                    draggable="true"
+                    ondragstart="onDragStart(event);">  
             </div>
         </div>
-        <script src="script.js"></script>     -->
-
         <script src="script.js"></script>
     </body> 
 </html>
